- Stopped the annoying "Attempted to use skill you do not have."
  messages by moving the message from error to debug.
- Fix autoBreakTime not working on some systems.
- Fix 'store desc <num>' command.
- Don't spam the teleport packet when you're not on one of the maps in
  allowedMaps. Only attempt to teleport up to 3 times, because some maps
  don't allow teleport.

New features:
- Beginnings of code that will allow skill usage on non-partied players.
  deltaHp condition added (currently useless to non-developers).
- Support for the 'charServer_ip', and 'charServer_port' options
  in servers.txt, which allow you to force connection to a specific
  map server.
- Support for eAthena servers. Set serverType to 3 for these servers.
- The _inInventory option's syntax has changed.
  Previous syntax:
    inInventory_name Red Potion,Blue Gem,AnotherItem
    inInventory_qty >5,>0,=10
  New syntax:
    inInventory Red Potion >5,Blue Gem,AnotherItem=10
- Support login error 1 as "Error: Server is closed".
- Use ai_cartAdd timeout if it's specified in timeouts.txt.
  This is for servers where you are disconnected when you try to add
  many items to the cart too quickly.
- A brand new console interface for Unix/Linux, which uses GNU readline.
  Input buffer corruption is now a thing of the past.
- Wait 3 seconds before standing if someone heals you.

New config options:
- autoSpell (spell name)
  When the sage autospell list is sent from the server, Kore will
  automatically pick the specified skill name to be used.
  Combine this with a useSelf_skill for casting Auto Spell.
- tankersList is a comma-seperated lists of player names that should be
  treated as if they were in your party so they can tank monsters for you.
  It was previously called ksPlayers.

Internal:
- Wx interface: load some modules only when they're necessary. This
  saves about 2 MB memory.

Credits:
- Squall: some minor fixes, charServer support in servers.txt.
- kaliwanagan, piroJOKE: eathena support.